[build-system]
requires = ["setuptools>=42", "wheel", "pybind11~=2.6.1"]
build-backend = "setuptools.build_meta"


[project]
name = "lwe"
dynamic = ["version", "dependencies"]
requires-python = ">= 3.11"
readme = "README.md"
description = "A python/c++ implementation of the Learning With Errors algorithm"


[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}